    description)
  * raggle: added basic navigation information to welcome message
  * raggle: updated welcome feed item
  * raggle: removed usage feed item
  * raggle: updated keyboard feed item
  * raggle: cleaned up reading feeds feed item
  * raggle: wrote adding feeds feed item
  * raggle: removed "Configuring Raggle" feed item
  * raggle: added "Files" feed item
  * raggle: updated reporting bugs section

* Sun Jun 22 05:29:02 2003, richlowe <richlowe@richlowe.net>
  * raggle: Fix bug where deleting an item would offset win/feed index,
            and cause widespread confusion, and a crash, when selecting
	    the last item.  It also made me change the code again, which I
	    had commited myself to not doing (think of it as the "Richard
	    sucks feature freeze", I think Paul will kill me if this
	    breaks other stuff :)

* Sun Jun 22 11:07:14 2003, pabs <pabs@pablotron.org>
  * README: updated system requirements
  * README: added installation section
  * README: added getting started section
  * README: added related links section
  * README: added Richard to the authors section

* Mon Jun 23 00:39:22 2003, richlowe <richlowe@richlowe.net>
  * README: Fix spelling.  hilited -> highlighted, sorry, ispell agrees
            with me

* Mon Jun 23 00:42:05 2003, richlowe <richlowe@richlowe.net>
  * README: Fix spelling in comment, hilite -> highlight, see ispell
            comment above. (String will be fixed in code after release)

* Mon Jun 23 04:37:14 2003, richlowe <richlowe@richlowe.net>
  * TODO, BUGS: Mention that I have patches for description scrolling
  * raggle.1: Sync with BUGS

* Mon Jun 23 05:07:58 2003, richlowe <richlowe@richlowe.net>
  * raggle.1: Update BUG report URL to match inline documentation.
	      *please* try to keep these in sync

* Mon Jun 23 06:01:13 2003, richlowe <richlowe@richlowe.net>
 * raggle: --lock-title and --save-items were being ignored with --add,
           fix (apparently missed in a merge).







